tests/analyzer/errors/struct_literal.ray
struct Foo {}

struct Vec2 {
    x: int,
    y: bool,
}

fn main() {
    var v = Vec2 { y = 1, x = true }
    var v = Vec2 { x = true, y = false }
    var v = Vec2 { x = 1, y = true, x = 5 }

    var foo = Foo{}
    var foo2 = foo{}
}
